# s3fs-oidc-vault-minio-lib

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  env
docker/: Dockerfile  build.sh  dependencies.Dockerfile
scripts/: docker-s3fs-mount.sh  s3fs-mount.sh
src/: Logger.cpp  Logger.hpp  configureClient.cpp  getOIDCToken.cpp  main.hpp  oidc_vault_minio_test.cpp  readSecretValue.cpp  s3fsFuncs.cpp
